# sample-ui

./: .gitignore  Cargo.toml  Jenkinsfile  Makefile  README.md  index.html  index.scss  privacy_policy.md  run.sh  sample-ui.sublime-project
src/: common.rs  main.rs
src/components/: baloon.rs  config_edit_dhcp_pool_view.rs  config_view.rs  device_group_view.rs  device_view.rs  mod.rs  module_view.rs  user_view.rs
src/data/: lan.rs  mod.rs
src/hooks/: mod.rs  use_user_context.rs
src/pages/: config_edit_dhcp_page.rs  config_edit_page.rs  config_list_page.rs  device_edit_page.rs  device_group_edit_page.rs  device_group_list_page.rs  device_list_page.rs  device_manage_page.rs  home.rs  itm_edit_page.rs  login.rs  logout.rs  mod.rs  module_edit_page.rs  module_list_page.rs  privacy_policy.rs  setting_edit_page.rs  user_edit_page.rs  user_list_page.rs  user_pwd_page.rs
src/util/: accessor.rs  clipboard.rs  cmp.rs  cookie.rs  dt_conv.rs  input.rs  mod.rs  query.rs
tools/: release.sh
tools/build-env/: Dockerfile_ubuntu_2304
