[package]
name = "sample-ui"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
instant = { version = "0.1", features = ["wasm-bindgen"] }
lipsum = "0.8"
log = "0.4"
getrandom = { version = "0.2", features = ["js"] }
rand = { version = "0.8", features = ["small_rng"] }
wasm-logger = "0.2"
yew = "0.19.3"
yew-router = "0.16.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "0.12.0"
lazy_static = "1.4.0"
gloo-timers = "0.2"
futures = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
gloo-utils = "0.1"
anyhow = "1.0.71"
url = "2.3.1"
yew-agent = "0.2.0"
chrono = "0.4.26"
isabelle-dm = { "git" = "https://github.com/isabelle-platform/isabelle-dm" }
regex = "1.9.4"
itertools = "0.2.2"
now = "0.1.3"
date-calculations = "0.1.1"

wasm-cookies = "0.2.1"

[dependencies.web-sys]
version = "0.3"
features = [
  "CssStyleDeclaration",
  "Clipboard",
  "Event",
  "EventTarget",
  "HtmlFormElement",
  "HtmlSelectElement",
  "HtmlTextAreaElement",
  "Headers",
  "Navigator",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "SubmitEvent",
  "Window",
]

[profile.release]
lto = true
opt-level = 's'
